2.1.0/_sources/gallery/user_interfaces/lineprops_dialog_gtk_sgskip.rst.txt


.. _sphx_glr_gallery_user_interfaces_lineprops_dialog_gtk_sgskip.py:


====================
Lineprops Dialog GTK
====================




.. code-block:: python

    import matplotlib
    matplotlib.use('GTKAgg')
    from matplotlib.backends.backend_gtk import DialogLineprops

    import numpy as np
    import matplotlib.pyplot as plt


    def f(t):
        s1 = np.cos(2*np.pi*t)
        e1 = np.exp(-t)
        return np.multiply(s1, e1)

    t1 = np.arange(0.0, 5.0, 0.1)
    t2 = np.arange(0.0, 5.0, 0.02)
    t3 = np.arange(0.0, 2.0, 0.01)

    fig, ax = plt.subplots()
    l1, = ax.plot(t1, f(t1), 'bo', label='line 1')
    l2, = ax.plot(t2, f(t2), 'k--', label='line 2')

    dlg = DialogLineprops([l1, l2])
    dlg.show()
    plt.show()

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: lineprops_dialog_gtk_sgskip.py <lineprops_dialog_gtk_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: lineprops_dialog_gtk_sgskip.ipynb <lineprops_dialog_gtk_sgskip.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
